2006-07-30  Paweł Sałek

	* libbalsa/gmime-part-rfc2440.c: wrapper is not guaranteed to exist.
	* libbalsa/gmime-application-pkcs7.c: ditto.
	* libbalsa/body.c: ditto.
	* libbalsa/mailbox_imap.c: remove cache file if download failed.

2008-07-02  Peter Bloomfield

	* libbalsa/address.c: (vcard_strsplit): skip empty fields;
	(libbalsa_address_new_from_vcard): return NULL if the we do not
	find a complete vCard with at least one address.
	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	check text/directory as well as text/x-vcard; check for NULL
	return value;
	(bm_widget_new_vcard): return NULL if
	libbalsa_address_new_from_vcard returns NULL.
	* src/balsa-print-object-text.c:
	(balsa_print_object_text_vcard): print broken text/x-vcard and
	non-vcard text/directory parts as text/plain instead of default.
	* src/balsa-print-object.c:
	(balsa_print_objects_append_from_body): check text/directory as
	well as text/x-vcard.

2008-06-17  Peter Bloomfield

	* libbalsa/mailbox.c: (lbm_cache_message,
	libbalsa_mailbox_get_message, lbm_get_index_entry_real,
	lbm_get_index_entry, libbalsa_mailbox_cache_message): cache
	message info for the display at get-message time.
	* libbalsa/mailbox_mbox.c: (parse_mailbox): remove redundant
	call to libbalsa_mailbox_cache_message.

2008-06-17  Peter Bloomfield

	* libbalsa/libbalsa_private.h: scrap unused cache-unseen-child
	code.
	* libbalsa/mailbox.c: (lbm_index_entry_populate_from_msg,
	lbm_node_has_unseen_child, lbm_msgno_changed,
	lbm_set_threading, mbox_model_get_value): ditto.

2008-06-14  Paweł Sałek

	* NEWS, configure.in: release 2.3.25.

2008-06-12  Peter Bloomfield

	* libbalsa/mailbox_mbox.c: (lbm_mbox_header_cb, parse_mailbox),
	libbalsa_mailbox_mbox_sync): declare GMimeParserHeaderRegexFunc
	callback properly, and do not cast references to it.

2008-06-11  Paweł Sałek

	* libbalsa/imap/imap-handle.c: detect disconnect on write.
	* src/ab-main.c: add "Delete Entry" menu entry.

2008-06-05  Peter Bloomfield
